<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:layout_width="64.0dip" android:layout_height="64.0dip" android:src="@drawable/ic_launcher" />
    <TextView android:textSize="16.0sp" android:textColor="@color/white" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" />
    <TextView android:textSize="16.0sp" android:textColor="@color/white_50" android:id="@id/tvSite" android:paddingLeft="16.0dip" android:paddingTop="4.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="https://moddroid.com" />
    <LinearLayout android:id="@id/vTvShow" android:background="@drawable/left_menu_focus" android:padding="16.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/imgTvShow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_tv" />
        <TextView android:textStyle="bold" android:textColor="@drawable/text_active" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/tvTvShow" android:paddingLeft="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tv_show" />
    </LinearLayout>
    <LinearLayout android:id="@id/vMovie" android:background="@drawable/left_menu_focus" android:padding="16.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/imgMovie" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_movie" />
        <TextView android:textStyle="bold" android:textColor="@drawable/text_active" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/tvMovie" android:paddingLeft="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/movie" />
    </LinearLayout>
    <LinearLayout android:id="@id/vFavorite" android:background="@drawable/left_menu_focus" android:padding="16.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/baseline_star_white_24dp" />
        <TextView android:textStyle="bold" android:textColor="@color/color_left_menu" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:paddingLeft="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/favorites" />
    </LinearLayout>
    <View android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/color_left_menu" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:padding="16.0dip" android:paddingLeft="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Tools" />
    <LinearLayout android:id="@id/vCalendar" android:background="@drawable/left_menu_focus" android:padding="16.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/baseline_event_white_24dp" />
        <TextView android:textStyle="bold" android:textColor="@color/color_left_menu" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:paddingLeft="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/calendar" />
    </LinearLayout>
    <LinearLayout android:id="@id/vDownload" android:background="@drawable/left_menu_focus" android:padding="16.0dip" android:focusable="true" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/baseline_get_app_white_24dp" />
        <TextView android:textStyle="bold" android:textColor="@color/color_left_menu" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:paddingLeft="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/download" />
    </LinearLayout>
    <View android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/color_left_menu" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Others" />
    <LinearLayout android:id="@id/vSetting" android:background="@drawable/left_menu_focus" android:padding="16.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/baseline_settings_white_24dp" />
        <TextView android:textStyle="bold" android:textColor="@color/color_left_menu" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:paddingLeft="24.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings" />
    </LinearLayout>
</LinearLayout>